# nrf52810-porting-example

./: .gitignore  README.md  custom_targets.json  mbed-os.lib  platformio.ini
boards/: leak_main_unit_nrf52810.json
src/: CMakeLists.txt  PeripheralNames.h  PeripheralPins.c  PinNames.h  device.h  main.cpp  sdk_config.h  system_nrf52.c
src/TARGET_LEAK_MAIN_UNIT_NRF52810/: system_nrf52.c
src/TARGET_LEAK_MAIN_UNIT_NRF52810/TOOLCHAIN_GCC_ARM/: NRF52810.ld
src/TARGET_MCU_NRF52810/device/TOOLCHAIN_GCC_ARM/: NRF52810.ld
